--- a/widgetService/build.gradle
+++ b/widgetService/build.gradle
@@ -64,7 +64,9 @@ dependencies {
     testCompile "io.micronaut:micronaut-http-client"
     testCompile "org.grails:grails-web-testing-support"
 
+    compile "org.grails:gorm-graphql:1.0.3.BUILD-SNAPSHOT"
     compile "org.grails.plugins:gorm-graphql:1.0.3.BUILD-SNAPSHOT"
+    compile 'com.graphql-java:graphql-java:13.0'
 }
 
 bootRun {
